2003-10-08  Bradley Bell  <btb@icculus.org>

	* arch/sdl/joydefs.c, main/gamecntl.c, main/kconfig.c,
	main/menu.c: Disabled 'd2x keys' weapon selection

2003-10-08  Martin Schaffner <maschaffner@gmx.ch>

	* main/object.h, main/multi.h: get rid of most warnings issued by
	cpp-precomp of gcc from Mac OS X dev tools

2003-10-05  Bradley Bell  <btb@icculus.org>

	* NEWS, configure.ac: increment version number

	* cfile/cfile.c: better handling of CRLF text files (when that is
	the native format)

	* utilities/hogcreate.c, utilities/hogextract.c,
	utilities/mvlcreate.c, utilities/mvlextract.c: use binary mode for
	reading/writing files

	* arch/win32/Makefile.am, arch/win32/include/ipx_udp.h,
	arch/win32/ipx_udp.c, arch/win32/winnet.c, main/menu.c: added UDP
	support for win32

2003-10-04  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c, main/config.c: oops, fgets does not return EOF

	* main/netmisc.c: change byte to sbyte, comments/whitespace

2003-10-03  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c, main/config.c: fix win32 eof bug.

	* arch/win32/ipx_drv.h, arch/win32/winnet.c, include/ipx.h: win32
	networking fixes

	* iff/iff.c, include/gr.h, include/iff.h, include/pstypes.h,
	main/ai2.c, main/aipath.c, main/aistruct.h, main/bm.h,
	main/config.c, main/escort.c, main/fireball.c, main/fuelcen.c,
	main/fuelcen.h, main/gameseg.c, main/gameseg.h, main/laser.c,
	main/lighting.c, main/mglobal.c, main/network.c, main/newdemo.c,
	main/object.c, main/object.h, main/paging.c, main/player.h,
	main/robot.h, main/segment.h, main/state.c, main/switch.c,
	main/switch.h, main/titles.c, main/wall.c, main/wall.h,
	main/weapon.c, main/weapon.h: change byte to sbyte,
	comments/whitespace

	* 2d/bitblt.c, cfile/cfile.c, include/cfile.h, main/ai.c,
	main/ai.h, main/gamemine.c, main/gauges.c, main/kconfig.c,
	main/menu.c, main/multi.c, main/multi.h, main/multibot.c,
	main/newdemo.h, main/render.c, main/scores.c: change byte to sbyte

	* configure.ac: better checking for timeval
